TransactionServiceTest added